--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		</div>
 	</nav>-->
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(images/DL676m.jpeg),url(images/DL676.jpeg); background-size:50% 100%; background-color:#6F8FAF; background-position: top right, bottom left ";data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(images/DL676m.jpg),url(images/DL676.jpg); background-size:50% 100%; background-color:#6F8FAF; background-position: top right, bottom left ";data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -131,7 +131,7 @@
 			<div class="couple-wrap animate-box">
 				<div class="couple-half">
 					<div class="groom">
-						<img src="images/DL491.jpeg" alt="groom" class="img-responsive">
+						<img src="images/DL491.jpg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
 						<h3 style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">David Putra</h3>
@@ -144,7 +144,7 @@
 				<!--<p class="heart text-center"><i class="icon-heart2"></i></p>-->
 				<div class="couple-half">
 					<div class="bride">
-						<img src="images/DL549.jpeg" alt="groom" class="img-responsive">
+						<img src="images/DL549.jpg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
 						<h3 style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">Cornelia Nadya Harjanto</h3>
